# orm-iris

./: .gitignore  README.md  generate_doc_ref_pages.py  main.py  main_analyser.py  main_controller.py  mkdocs.yml  pyproject.toml  spectra_dummy.csv  test_measurement.sif
.github/workflows/: publish.yml
docs/: docs_to_add.md  index.md  installation.md  usage.md
docs/developer/: coordinate_frames.md
docs/stylesheets/: extra.css
extensions/: extension_intermediary.py  extension_template.py
extensions/bf_sersSubstrate_coorGen/: bf1_params_generation.py  bf2_BF_substrate_masking.py  bf3_BF_substrate_characterisation.py  bf_sersSubstrate_coorGen.ui  bf_sersSubstrate_coorGen_ui.py  ext_BF_SERSSubstrate_coorGen.py  utils.py
extensions/camera_exposure_controller/: camera_exposure_controller.ui  camera_exposure_controller_ui.py  ext_cameraExposureController.py
extensions/optics_calibration_aid/: Ext_OpticsCalibrationAid.py  ext_opticsCalibrationAid.py  optics_calibration_aid.ui  optics_calibration_aid_ui.py
iris/: __init__.py  __main__.py  main_analyser.py
iris/calibration/: calibration_generator.py  test_calibrator_wavelength.py
iris/controllers/: __init__.py  camera_controller_dummy.py  camera_controller_thorlabs.py  camera_controller_thorlabs_color.py  camera_controller_thorlabs_mono.py  camera_controller_thorlabs_mono2.py  camera_controller_webcam.py  class_camera_controller.py  class_spectrometer_controller.py  class_xy_stage_controller.py  class_z_stage_controller.py  mcm301_wrapper.py  oceandirect_wrapper.py  raman_spectrometer_controller_Andor_dll.py  raman_spectrometer_controller_Andor_pylablib.py  raman_spectrometer_controller_PI_dll.py  raman_spectrometer_controller_PI_pylablib.py  raman_spectrometer_controller_PI_trial.py  raman_spectrometer_controller_QEPro.py  raman_spectrometer_controller_WasatchEnlighten.py  raman_spectrometer_controller_WasatchEnlighten.py.py  raman_spectrometer_controller_dummy.py  xy_stage_controller_PI.py  xy_stage_controller_PI_dll.py  xy_stage_controller_dummy.py  xy_stage_controller_m30xy.py  xy_stage_controller_zaber.py  z_stage_controller_dummy.py  z_stage_controller_mcm301.py  z_stage_controller_pfm450.py  z_stage_controller_z825b.py
iris/data/: __init__.py  calibration_objective.py  measurement_Raman.py  measurement_RamanMap.py  measurement_coordinates.py  measurement_image.py
iris/gui/: __init__.py  dataHub_MeaImg.py  dataHub_MeaRMap.py  data_hub_image.py  hilvl_Brightfield.py  hilvl_Raman.py  hilvl_coorGen.py  legacy_motion_video.py  motion_video.py  raman.py  shortcut_handler.py  spectrometerCalibration.py  timestamp_coorshift.py
iris/multiprocessing/: __init__.py  basemanager.py  dataStreamer_Raman.py  (+1 more)
site/: 404.html  index.html  objects.inv
user guide/: ORM app usage and updates.docx  figures.pptx
(+230 files in other folders)
